// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen configure tests Adding codegen configuration works as expected in android project 1`] = `
"projects:
  configurecodegen1eab:
    schemaPath: app/src/main/graphql/schema.json
    includes:
      - app/src/main/graphql/**/*.graphql
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: ''
        generatedFileName: ''
        docsFilePath: app/src/main/graphql/com/amazonaws/amplify/generated/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;

exports[`codegen configure tests Adding codegen configuration works as expected in ios project 1`] = `
"projects:
  configurecodegen1eab:
    schemaPath: amplify/backend/api/configurecodegen1eab/build/schema.graphql
    includes:
      - graphql/**/*.graphql
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: swift
        generatedFileName: API.swift
        docsFilePath: graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;

exports[`codegen configure tests Adding codegen configuration works as expected in javascript project 1`] = `
"projects:
  configurecodegen1eab:
    schemaPath: amplify/backend/api/configurecodegen1eab/build/schema.graphql
    includes:
      - src/graphql/**/*.js
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: javascript
        generatedFileName: ''
        docsFilePath: src/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;

exports[`codegen configure tests Updating codegen configuration works as expected in android project 1`] = `
"projects:
  configurecodegen1eab:
    schemaPath: app/src/main/graphql/schema.json
    includes:
      - app/src/main/graphql/**/*.graphql
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: android
        generatedFileName: ''
        docsFilePath: app/src/main/graphql/com/amazonaws/amplify/generated/graphql
        region: us-west-2
        apiId: null
        maxDepth: 4
extensions:
  amplify:
    version: 3
"
`;

exports[`codegen configure tests Updating codegen configuration works as expected in ios project 1`] = `
"projects:
  configurecodegen1eab:
    schemaPath: amplify/backend/api/configurecodegen1eab/build/schema.graphql
    includes:
      - graphql/**/*.graphql
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: swift
        generatedFileName: API.swift
        docsFilePath: graphql
        region: us-west-2
        apiId: null
        maxDepth: 4
extensions:
  amplify:
    version: 3
"
`;

exports[`codegen configure tests Updating codegen configuration works as expected in javascript project 1`] = `
"projects:
  configurecodegen1eab:
    schemaPath: amplify/backend/api/configurecodegen1eab/build/schema.graphql
    includes:
      - src/graphql/**/*.js
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: javascript
        generatedFileName: ''
        docsFilePath: src/graphql
        region: us-west-2
        apiId: null
        maxDepth: 4
extensions:
  amplify:
    version: 3
"
`;
